# rsiot-examples

./: README.md
cmp_slint_minimal/: Cargo.toml  build.rs
cmp_slint_minimal/src/: main.rs  messages.rs
cmp_slint_minimal/src/config_slint/: mod.rs
cmp_slint_minimal/src/config_slint/app/: main_window.slint
cmp_slint_minimal/src/config_slint/app/global/: input.slint  main.slint  output.slint
material_components/: Cargo.toml  package-lock.json  tailwind.config.js
material_components/src/: main.rs  stores.rs
material_components/src/material_components/: drives.rs
resource_usage/: Cargo.toml
resource_usage/dashboards/: tokio_metrics.json
resource_usage/src/: main.rs  messages.rs
resource_usage/src/config_inject_periodic/: mod.rs
resource_usage/src/config_logger/: mod.rs
resource_usage/src/config_timescaledb/: mod.rs
rpi_slint_keyboard/: Cargo.toml  README.md  build.rs  main.slint
rpi_slint_keyboard/src/: config_raspberrypi_gpio.rs  config_slint.rs  main.rs  message.rs
slint_svg/: Cargo.toml  README.md
slint_svg/src/: main.rs  messages.rs
slint_svg/src/config_inject_periodic/: mod.rs
slint_svg/src/config_slint/: mod.rs
slint_svg/src/config_slint/app/: main_window.slint
slint_svg/src/config_slint/app/global/: input.slint  main.slint
slint_svg/src/config_svg/: mod.rs
uart_rpi_and_esp/esp/: Cargo.toml  rust-toolchain.toml  sdkconfig.defaults
uart_rpi_and_esp/esp/.cargo/: config.toml
uart_rpi_and_esp/esp/.zed/: settings.json
uart_rpi_and_esp/esp/src/: main.rs
uart_rpi_and_esp/messages/: Cargo.toml
uart_rpi_and_esp/messages/src/: lib.rs
uart_rpi_and_esp/rpi/: Cargo.toml  Cross.toml  README.md
uart_rpi_and_esp/rpi/src/: main.rs  test_device.rs
