[package]
name = "esp"
version = "0.1.0"
authors = ["Konstantin-Dudersky <Konstantin.Dudersky@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []


[dependencies]
esp-idf-svc = { version = "0.51.0", features = ["std"] }
rsiot = { path = "../../../rsiot", features = [
    "cmp_esp",
    "logging",
    "single-thread",
    "serde_postcard",
] }
tokio = { version = "*", features = ["macros", "rt"] }
tracing = "*"
serde = { version = "*", features = ["derive"] }

messages = { version = "*", path = "../messages" }

[build-dependencies]
embuild = { version = "*", features = ["espidf"] }
